--- a/app.json
+++ b/app.json
@@ -30,8 +30,7 @@
     "papertrail",
     "heroku-postgresql",
     "rediscloud",
-    "sendgrid",
-    "scout"
+    "sendgrid"
   ],
   "buildpacks": [
     {
