--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
           name: Setup DB
           command: bundle exec rails db:create db:schema:load
       - run:
-          name: Setup DB
+          name: Precompile assets
           command: bundle exec rails assets:precompile
       - ruby/rspec-test
       - store_artifacts:
